--- a/src/_contents.html
+++ b/src/_contents.html
@@ -8,7 +8,10 @@
   </head>
   <body>
     <h1>APPENDIX: Cardeal page content</h1>
-    <p>NOTE: Below are the contents of the various sections of the cardeal page in HTML format. You can change the HTML code of any or all of these sections to whatever fit your design and implemenation.</p> 
+    <p>
+      NOTE: Below are the contents of the various sections of the cardeal page in HTML format. You can change the HTML
+      code of any or all of these sections to whatever fit your design and implemenation.
+    </p>
     <p><a href="/">Back to the one-page index.html</a></p>
     <section>
       <h2>The Header/Navbar section</h2>
@@ -24,7 +27,7 @@
       <h3>Left side</h3>
       <p>We buy "any" car.</p>
       <p>Get Your Free Online Valuation Now!</p>
-      
+
       <h3>Right side</h3>
       <p>Add a form with four input boxes with placeholders sayting:</p>
       <ul>
@@ -173,6 +176,7 @@
         years. I was a former Ford employee and the vehicle has been taken care of great. It has tinted windows,
         interior is spotless. Great first car!
       </p>
+
       <p><strong>Honda Civic</strong></p>
       <img src="images/honda_civic_sedan.png" alt="Honda Civic" />
       <p>2013</p>
@@ -245,7 +249,7 @@
     </section>
     <section>
       <h2>The Footer section</h2>
-      <img src="images/logo_ver.svg" alt="cardeal logo" />
+      <img src="./images/logo.svg" alt="cardeal logo" />
       <p><strong>Contact Us</strong></p>
       <address>
         <a href="tel:+12003456789">1-200-345-6789</a><br />
@@ -272,7 +276,8 @@
       </ul>
 
       <p>
-        <span>&copy;</span><span>2021 All rights reserved. <a href="#">Privacy Policy</a> <a href="#">Terms of Use</a></span>
+        <span>&copy;</span
+        ><span>2021 All rights reserved. <a href="#">Privacy Policy</a> <a href="#">Terms of Use</a></span>
       </p>
     </section>
   </body>
